--- a/src/ui/styles/globals.css
+++ b/src/ui/styles/globals.css
@@ -93,7 +93,6 @@
 
   body {
     @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
   }
 
   button {
@@ -104,5 +103,21 @@
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+.hero-slide-up {
+  animation: hero-animation 1s ease-in-out
+}
+
+@keyframes hero-animation {
+  0% {
+      opacity: 0;
+      transform: translateY(16px)
+  }
+
+  to {
+      opacity: 1;
+      transform: translateY(0)
   }
 }
